--- a/css/styles.css
+++ b/css/styles.css
@@ -170,15 +170,23 @@ tr:hover {
     background-color: #ddd;
 }
 
+/* Estilos para os botões */
+.btn {
+    padding: 8px 12px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    border: none;
+    margin-right: 5px;
+}
+
 .acoes {
     text-align: center;
 }
 
 .acoes button {
-    background-color: transparent;
-    border: none;
     cursor: pointer;
-    font-size: 1.2rem;
+    font-size: 16px;
     margin: 0 5px;
 }
 
